# echo-server-rust-otel-demo

./: README.md
development/: docker-compose.yaml
development/config/: grafana-datasources.yaml  mimir.yaml  otel-collector-config.yaml
server/: Cargo.toml
server/src/: main.rs
